Ingress/web-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # 认证类型
    nginx.ingress.kubernetes.io/auth-type: basic
    # 包含 user/password 定义的 secret 对象名
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # 要显示的带有适当上下文的消息，说明需要身份验证的原因
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - tzh'
spec:
  rules:
  - host: todo.tzh.com
    http:
      paths:
      - path: /
        backend:
          serviceName: todo
          servicePort: 3000
  tls:
  - hosts:
    - todo.tzh.com          # 证书绑定的域名
    secretName: foo-tls     # 指定刚刚创建的secret
